--- a/style.css
+++ b/style.css
@@ -190,7 +190,18 @@ td:nth-last-child(2) {
     margin: 0 auto;
 }
 
+.nav-link.active,
+.nav-link:hover {
+    color: #1ebba3;
+}
+
 .logo {
     width: 50%;
     justify-content: center;
+}
+
+p {
+    float: left;
+    width: 100%;
+    text-align: center;
 }
