--- a/style.css
+++ b/style.css
@@ -123,15 +123,15 @@ td:nth-last-child(2) {
 }
 
 .yellow {
-    background: #3fb65f;
+    background: #1ebba3;
 }
 
 .green {
-    background: #3fb65f;
+    background: #1ebba3;
 }
 
 .purple {
-    background: #3fb65f;
+    background: #1ebba3;
 }
 
 .ranking {
@@ -140,7 +140,7 @@ td:nth-last-child(2) {
     color: #000000;
     margin-bottom: 0;
     padding: 20px 0;
-    background: #4a5564;
+    background: #1ebba3;
     border-radius: 15px 15px 0 0;
 }
 
